--- a/stories.html
+++ b/stories.html
@@ -17,7 +17,9 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <h1><i class="fas fa-crown"></i> Yoruba Heritage</h1>
+                <a href="index.html">
+                    <h1><i class="fas fa-crown"></i> Yoruba Heritage</h1>
+                </a>
             </div>
             <button class="nav-toggle" id="navToggle">
                 <span></span>
