--- a/ifa-wisdom.html
+++ b/ifa-wisdom.html
@@ -118,6 +118,7 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/content-loader.js"></script>
     <script src="js/ifa.js"></script>
 </body>
 </html>
