--- a/stories.html
+++ b/stories.html
@@ -116,6 +116,7 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/content-loader.js"></script>
     <script src="js/stories.js"></script>
 </body>
 </html>
