--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <li><a href="articles.html">Articles</a></li>
                 <li><a href="stories.html">Stories</a></li>
                 <li><a href="ifa-wisdom.html">IFA Wisdom</a></li>
+                <li><a href="diaspora.html">Diaspora</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="search.html" class="btn-search"><i class="fas fa-search"></i> Search</a></li>
